--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "Assignment-5/server.js",
+      "src": "Assignment_5/server.js",
       "use": "@vercel/node",
       "config": { 
         "includeFiles": [
-          "Assignment-5/modules/**", 
-          "Assignment-5/Data/**", 
-          "Assignment-5/public/css/**", 
-          "Assignment-5/views/**"
+          "Assignment_5/modules/**", 
+          "Assignment_5/Data/**", 
+          "Assignment_5/public/css/**", 
+          "Assignment_5/views/**"
         ] 
       }
     }
@@ -17,7 +17,7 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "Assignment-5/server.js"
+      "dest": "Assignment_5/server.js"
     }
   ]
 }
